<resources>
    <string name="app_name">Easy Calcu</string>
    <string name="hint1">Enter First Number</string>
    <string name="hint2">Enter Second Number</string>
    <string name="exit">Exit</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="divide">/</string>
    <string name="multiply">X</string>
    <string name="clear">C</string>
    <string name="hint">0</string>
</resources>
