<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="16dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:orientation="vertical"
    android:background="@color/blackie"
    tools:context="aldwin.tablante.com.easycalcu.MainActivity">


    <EditText
        android:id="@+id/editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint1"
        android:textColor="@color/whitie"
        android:textColorHint="@color/whitie"
        android:textSize="24dp"
        android:inputType="numberDecimal"

        />
    <View
        android:layout_width="fill_parent"
        android:layout_height="5dip"
        android:background="@color/blackie"
        />
    <EditText
        android:id="@+id/editText2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint2"
        android:textSize="24dp"
        android:inputType="numberDecimal"
        android:textColor="@color/whitie"
        android:textColorHint="@color/whitie"

        />
<View
    android:layout_width="fill_parent"
    android:layout_height="1dip"
    android:background="@color/blackie"
    />
    <EditText
        android:id="@+id/editText3"
        android:layout_gravity="center"
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        android:hint="@string/hint"
        android:textAlignment="center"
        android:textSize="32dp"

       android:inputType="numberDecimal"
        android:background="@color/whitie"


        />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="16dp"
        android:orientation="horizontal"
      android:layout_gravity="center"
        >

        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/btncolor"
            android:onClick="doPlus"
            android:text="@string/plus"
            android:textSize="20dp"
            android:textColor="@color/whitie"
            />

        <Button
            android:id="@+id/button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/btncolor"
            android:onClick="doMinus"
            android:text="@string/minus"
            android:textColor="@color/whitie"
            android:textSize="20dp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="doClear"
 android:background="@color/colorAccent"
            android:text="@string/clear"
            android:textSize="20dp" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="8dp"
        android:orientation="horizontal"
        android:layout_gravity="center"
        >

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="doProduct"
            android:background="@color/btncolor"
            android:text="@string/multiply"
            android:textSize="20dp"
            android:textColor="@color/whitie"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="doDivide"
            android:background="@color/btncolor"
            android:text="@string/divide"
            android:textSize="20dp"

            android:textColor="@color/whitie"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="doExit"
            android:background="@color/btncolor"
            android:text="@string/exit"
            android:textSize="20dp"
            android:textColor="@color/whitie"/>

    </LinearLayout>

</LinearLayout>
